components/BackToTop/BackToTop.module.css
.button {
  position: fixed;

  right: 2rem;
  bottom: 2rem;

  width: 50px;
  height: 50px;

  border: none;
  border-radius: 50%;

  padding: 0;

  background: var(--orange);
  color: white;

  display: flex;
  align-items: center;
  justify-content: center;

  cursor: pointer;

  opacity: 0;
  visibility: hidden;

  transition: all 0.3s ease;

  z-index: 999;
}

.visible {
  opacity: 1;
  visibility: visible;
}

.button:hover {
  transform: translateY(-4px);
}

